# NYC-Traffic-Volume-Prediction

./: .gitignore  baseline.R  pipeline.R
traffic-weather-joiner/: CMakeLists.txt
traffic-weather-joiner/sources/: add_time_features.hpp  constants.hpp  main.cpp  merge_split_data.hpp  merge_weather.hpp  sort_by_time.hpp  split_traffic.hpp  time_features.hpp  units.hpp  utilities.hpp
